--- a/ReimbursementApp/pom.xml
+++ b/ReimbursementApp/pom.xml
@@ -5,9 +5,9 @@
   <groupId>com</groupId>
   <artifactId>Reimbursements</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
-  <name>Reimbursement</name>
+  <name>Reimbursements</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -33,6 +33,12 @@
 	    <artifactId>postgresql</artifactId>
 	    <version>42.2.0</version>
 	</dependency> 
+	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>servlet-api</artifactId>
+	    <version>2.5</version>
+	    <scope>provided</scope>
+	</dependency>
   </dependencies>
   
 </project>
