--- a/ReimbursementApp/pom.xml
+++ b/ReimbursementApp/pom.xml
@@ -36,13 +36,26 @@
 	    <artifactId>postgresql</artifactId>
 	    <version>42.2.0</version>
 	</dependency> 
+	<!-- 
 	<dependency>
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>servlet-api</artifactId>
 	    <version>2.5</version>
 	    <scope>provided</scope>
 	</dependency>
-	
+	-->
+	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>javax.servlet-api</artifactId>
+	    <version>3.0.1</version>
+	    <scope>provided</scope>
+	</dependency>
+	<dependency>
+	    <groupId>commons-fileupload</groupId>
+	    <artifactId>commons-fileupload</artifactId>
+	    <version>1.3</version>
+	</dependency>
+
 	<!-- 
 	<dependency>
   		<groupId>org.apache.tomcat.embed</groupId>
