--- a/ReimbursementApp/.gitignore
+++ b/ReimbursementApp/.gitignore
@@ -5,6 +5,9 @@
 */webapp/uploads/
 */webapp/css/bootstrap-3.3.7
 */webapp/css/bootstrap-3.3.7/
+/c/Users/Associate/java/project-one-Rakatashii/ReimbursementApp/src/main/webapp/images/P1Icons
+ReimbursementApp/src/main/webapp/images/P1Icons/
+*/webapp/images/P1Icons/
 
 ### Java ###
 # Compiled class file
