--- a/ReimbursementApp/src/main/webapp/WEB-INF/web.xml
+++ b/ReimbursementApp/src/main/webapp/WEB-INF/web.xml
@@ -23,10 +23,10 @@
   </servlet-mapping>
   
     <welcome-file-list>
-    <welcome-file>home.html</welcome-file>
+    <welcome-file>//views//home.html</welcome-file>
   </welcome-file-list>
   <error-page>
     <error-code>404</error-code>
-    <location>/404.html</location>
+    <location>//views//404.html</location>
   </error-page>
 </web-app>
