--- a/ReimbursementApp/.gitignore
+++ b/ReimbursementApp/.gitignore
@@ -2,13 +2,16 @@
 /bin/
 
 # Project
+# Really need to figure out which format supposed to use...
+/src/main/webapp/images/backgrounds/
+/src/main/webapp/images/P1Icons/
 */webapp/uploads/
-*/webapp/css/bootstrap-3.3.7
-*/webapp/css/bootstrap-3.3.7/
-/c/Users/Associate/java/project-one-Rakatashii/ReimbursementApp/src/main/webapp/images/P1Icons
-ReimbursementApp/src/main/webapp/images/P1Icons/
-*/webapp/images/P1Icons/
-
+/src/main/webapp/images/P1Icons/
+/Reimbursements/src/main/webapp/js/node_modules
+/src/main/webapp/js/node_modules/
+*/Reimbursements/src/main/webapp/js/node_modules
+/src/main/webapp/package-lock.json
+/preferences/
 ### Java ###
 # Compiled class file
 *.class
